<resources>
    <string name="app_name">AI助手</string>
    <string name="permission_fail">必须允许所有权限，否则功能会异常</string>
    <string name="permission_contact_fail">必须允许读取电话本和拨打电话权限，否则功能会异常</string>
    <string name="permission_read_installed_pkg_fail">必须允许读取安装APP列表的权限，否则功能会异常</string>
    <string name="application_exit">是否完全退出当前应用</string>
    <string name="voice_input">开启语音文本输入</string>
    <string name="network_error">网络错误，不能访问外网</string>
    <string name="image_view_assistant">帮助</string>
    <string name="image_view_microphone">麦克风</string>
    <string name="image_view_option">选项</string>
    <string name="image_view_manage">菜单管理</string>
    <string name="image_view_left_arrow">左箭头</string>
    <string name="image_view_right_arrow">右箭头</string>
    <string name="image_view_send_head">发送消息头像</string>
    <string name="image_view_receive_head">接收消息头像</string>
    <string name="option_dialog_title">功能选择</string>
    <string name="option_voice_output_text">语音播报</string>
    <string name="option_query_again">重新提问</string>
    <string name="option_copy_edit_text">拷贝编辑</string>
    <string name="option_clear_item">清除显示</string>
    <string name="option_web_query_text">上网搜索</string>
    <string name="option_save_image">保存图片</string>
    <string name="option_process_again">重新处理</string>
    <string name="option_show_setting">系统设置</string>
    <string name="option_show_help">显示帮助</string>
    <string name="option_translate_start">开始翻译</string>
    <string name="option_shortcut_translate_stop">结束翻译</string>
    <string name="option_ocr">文字识别</string>
    <string name="option_face_identify">人脸识别</string>
    <string name="option_image_classify">物体识别</string>
    <string name="option_text_input">文本输入</string>
    <string name="option_clear_all_items">清除所有</string>
    <string name="option_paste_item">粘贴文本</string>
    <string name="option_face_detect">人脸检测</string>
    <string name="option_face_merge">人脸融合</string>
    <string name="option_face_compare">人脸比较</string>
    <string name="option_face_authenticate">身份认证</string>
    <string name="option_show_face_manger">人脸库管理</string>
    <string name="option_human_body_gesture">手势识别</string>
    <string name="option_human_body_headcount">清点人头</string>
    <string name="option_human_body_segment">人像分割</string>
    <string name="option_image_process_selfie_anime">人像动漫化</string>
    <string name="option_image_process_colourize">黑白图像上色</string>
    <string name="option_image_process_style_trans">图像风格转换</string>
    <string name="option_ocr_qrcode">二维码识别</string>
    <string name="option_ocr_handwriting">手写文本识别</string>
    <string name="option_nlp_correct_text">文本纠错</string>
    <string name="option_nlp_news_summary">文章摘要</string>
    <string name="option_nlp_dnn_sentence">语句通顺</string>
    <string name="option_camera">相机拍照</string>
    <string name="option_image">相册选图</string>
    <string name="baidu_token_fail">获取token失败</string>
    <string name="baidu_unit_welcome_support_touch">我是手机小助手康康，现已准备好了。</string>
    <string name="baidu_unit_about">当前版本是：</string>
    <string name="baidu_unit_question_help">
        一、必须连接网络，点击麦克图标开始一问一答。你可以问我:\n
        1.今天[北京]天气怎么样?\n
        2.台湾有多大?\n
        3.[英语|法语|韩语]翻译今天星期几?\n
        4.一公里等于几英里?\n
        5. 99的平方是多少?\n
        6.什么是叶公好龙?\n
        7.写首关于春天的诗\n
        8.写个关于过年的对联\n
        9.上网搜索科幻小说\n
        10.讲个笑话\n
        11.成语龙马精神的意思?\n
        12.词语漂浮的意思?\n\n
        你还可以命令我:\n
        1.把[声音|亮度]调[最][高|低]\n
        2.拍个照[录个相]\n
        3.播首歌[双节棍]\n
        4.打个电话给10086[老婆]\n
        5.打开[图库|相机|设置]
    </string>
    <string name="baidu_unit_question_help_dialogue_translate_mode_support_touch">
        二、如何进入特殊对话模式?\n
        1.翻译模式。\n
        (1)按右下菜单键，选择【开始翻译】进入或退出。\n
        (2)语音”开始翻译[英语/德语/..]“，”开始[英语/德语]翻译“。\n
        (3)语音”结束“或“退出“,“exit”或“quit”。\n
        2.诗词/对联模式。\n
        (1)语音”开始写[诗|对联]”。\n
        (2)语音”结束“或“退出“。</string>
    <string name="baidu_unit_question_help_face_mode_support_touch">
        三、如何进入人脸识别模式?\n
        1.按右下菜单键，选择【人脸识别】进入。\n
        2.进入后长按下方人脸开始扫描。\n
        3.如何扫描成功会自动退出该界面。\n
        4.或按回退键退出。</string>
    <string name="baidu_unit_question_help_ocr_mode_support_touch">
        四、如何进入文字识别模式?\n
        1.按右下菜单键，选择【文字识别】进入\n
        2.语音”识别[中英文/英语/德语/..]“或”[中英文/英语/德语]识别“。\n
        3.进入后按识别键拍照识别，或长按识别后提问。\n
        4.按回退键退出。</string>
    <string name="baidu_unit_question_help_classify_mode_support_touch">
        五、如何进入物体识别模式?\n
        1.按右下菜单键，选择【物体识别】进入\n
        2.语音”通用识别“，”植物识别“，”车型识别“等。\n
        3.进入后按识别键拍照识别，或长按识别后提问。\n
        4.按回退键退出。</string>
    <string name="baidu_unit_question_help_keyboard_input">
        六、如何键盘文字输入?\n
        1.按菜单键显示或隐藏文字输入框。\n
        2.按确认键完成文字输入。</string>
    <string name="baidu_unit_question_help_extra_fun">
        七、如何激活额外附加功能?\n
        1.在系统设置中选择【启用额外功能】。\n
        2.常按右下菜单键进入额外功能菜单。</string>
    <string name="baidu_unit_question_help_other">
        八、其他\n
        1.长按麦克图标进入语音文字输入。</string>
    <string name="baidu_unit_answer_fail">没有任何回复</string>
    <string name="baidu_unit_quit_session">好的，我明白了。请继续提问！</string>
    <string name="baidu_unit_fail_session">我还没有学会这个问题，不知道如何回答你</string>
    <string name="button_cancel">取消</string>
    <string name="button_ok">确定</string>
    <string name="helpInfo_title">帮助信息</string>
    <string name="setting_title">系统设置</string>
    <string name="baidu_tts">语音合成输出</string>
    <string name="baidu_request_image">请求图片输出</string>
    <string name="baidu_face_identify_work_mode">人脸识别模式</string>
        <string name="baidu_online_1N_face_identify">在线1:N多人脸识别模块</string>
        <string name="baidu_online_MN_face_identify">在线M:N多人脸识别模块</string>
        <string name="baidu_content_approve_face_identify">图像审核公众人物识别模块</string>
    <string name="baidu_extra_fun">启用额外功能</string>
    <string name="baidu_unit_working">努力工作中..</string>
    <string name="baidu_unit_tts_voice_type">合成声音类别</string>
    <string name="baidu_unit_tts_voice_lady">女声</string>
    <string name="baidu_unit_tts_voice_gentleman">男声</string>
    <string name="baidu_unit_tts_voice_girl">女童声</string>
    <string name="baidu_unit_tts_voice_boy">男童声</string>
    <string name="baidu_unit_speech_language_type">语音识别语言类别</string>
    <string name="baidu_unit_speech_language_english">英语</string>
    <string name="baidu_unit_speech_language_chinese">普通话</string>
    <string name="baidu_unit_speech_language_sichuanese">四川话</string>
    <string name="baidu_unit_speech_language_cantonese">粤语</string>
    <string name="baidu_unit_bot_type">技能类别</string>
    <string name="baidu_unit_bot_weather">天气</string>
    <string name="baidu_unit_bot_ia">智能问答</string>
    <string name="baidu_unit_bot_calculator">计算器</string>
    <string name="baidu_unit_bot_word_definition">名词解释</string>
    <string name="baidu_unit_bot_idiom">成语问答</string>
    <string name="baidu_unit_bot_unit_conversion">单位换算</string>
    <string name="baidu_unit_bot_greet">问候</string>
    <string name="baidu_unit_bot_chat">闲聊</string>
    <string name="baidu_unit_bot_poem">智能写诗</string>
    <string name="baidu_unit_bot_couplet">智能对联</string>
    <string name="baidu_unit_bot_translate">智能翻译</string>
    <string name="baidu_unit_bot_joke">笑话</string>
    <string name="baidu_unit_bot_garbage">垃圾分类</string>
    <string name="baidu_unit_hint_brightness_low">正在降低亮度到</string>
    <string name="baidu_unit_hint_brightness_high">正在提高亮度到</string>
    <string name="baidu_unit_hint_launch_app">正在启动</string>
    <string name="baidu_unit_hint_exit_app">正退出当前应用</string>
    <string name="baidu_unit_hint_launch_image">正在拍照</string>
    <string name="baidu_unit_hint_launch_video">正在录像</string>
    <string name="baidu_unit_hint_launch_camera_fail">启动相机失败</string>
    <string name="baidu_unit_hint_playing_music">正在播放歌曲</string>
    <string name="baidu_unit_hint_playing_music_list">歌曲列表\n</string>
    <string name="baidu_unit_hint_play_music_fail">播放歌曲失败</string>
    <string name="baidu_unit_hint_phone_dialing">正在拨打电话给</string>
    <string name="baidu_unit_hint_phone_fail">没有该联系人或号码</string>
    <string name="baidu_unit_hint_voice_down">正在降低音量</string>
    <string name="baidu_unit_hint_voice_up">正在提高音量</string>
    <string name="baidu_unit_hint_voice_on">正在打开声音</string>
    <string name="baidu_unit_hint_voice_off">正在关闭声音</string>
    <string name="baidu_unit_web_search">正在上网搜索</string>
    <string name="baidu_unit_fix_translate_help_support_touch">
        1.按左箭头汉语译外语，右箭头外语译汉语。\n
        2.按右下菜单键，选择【退出翻译】可退出，或语音”退出”。\n
        3.按右下菜单键，选择【OCR文字识别】进入OCR识别翻译。\n
        4.目前支持中英文的双向语音输入和翻译，还只支持单向中文翻译成 法语,德语,俄语,日语,韩语,泰语,意大利语,西班牙语,葡萄牙语,阿拉伯语。</string>
    <string name="baidu_unit_fix_translate_start">进入%1$s对话翻译</string>
    <string name="baidu_unit_fix_translate_stop">退出%1$s对话翻译</string>
    <string name="baidu_unit_fix_translate_input">开始%1$s输入</string>
    <string name="baidu_unit_fix_translate_language_error">当前不支持%1$s对话翻译</string>
    <string name="baidu_unit_fix_poem_help">直接说出关键词，据此做诗一首</string>
    <string name="baidu_unit_fix_poem_start">进入诗词模式</string>
    <string name="baidu_unit_fix_poem_stop">退出诗词模式</string>
    <string name="baidu_unit_fix_couplet_help">直接说出关键词，据此写对联</string>
    <string name="baidu_unit_fix_couplet_start">进入对联模式</string>
    <string name="baidu_unit_fix_couplet_stop">退出对联模式</string>
    <string name="baidu_unit_ocr_fail">OCR识别失败</string>
    <string name="baidu_unit_ocr_start">启动OCR识别%1$s中..</string>
    <string name="baidu_unit_ocr_not_support">目前不支持%1$s识别</string>
    <string name="baidu_unit_keyboard_input">键盘输入文字</string>
    <string name="baidu_unit_keyboard_input_send">确认</string>
    <string name="baidu_ocr_text_fail">识别文字失败</string>
    <string name="baidu_ocr_qrcode_fail">识别二维码失败</string>
    <string name="baidu_ocr_formula_fail">识别公式失败</string>
    <string name="baidu_face_identify_start">启动人脸识别中..</string>
    <string name="baidu_face_registering">正在注册人脸</string>
    <string name="baidu_face_register_deleting">正在删除人脸数据</string>
    <string name="baidu_face_register_success">用户【%1$s】注册完毕</string>
    <string name="baidu_face_register_userinfo_hint">请在此输入人物名称</string>
    <string name="baidu_face_user_manager_title">人脸管理</string>
    <string name="baidu_face_user_manager_delete">删除</string>
    <string name="baidu_face_user_manager_add">添加</string>
    <string name="baidu_face_user_manager_update">更新</string>
    <string name="baidu_face_user_info_title">用户信息</string>
    <string name="baidu_face_user_info_extra">用户信息:</string>
    <string name="baidu_face_user_info_register_image">注册图片，长按可修改</string>
    <string name="baidu_face_user_info_image">图片</string>
    <string name="baidu_face_user_info_camera">拍照</string>
    <string name="baidu_face_user_info_update_ignore">没有信息改变，不需要更新</string>
    <string name="baidu_face_user_info_update_image_success">更新人脸图片成功</string>
    <string name="baidu_face_user_info_query_success">信息查询成功</string>
    <string name="baidu_face_manager_delete_msg">确认一定要删除选中的人脸数据？</string>
    <string name="baidu_face_manager_querying">努力查询人脸数据中..</string>
    <string name="baidu_face_identify_fail">很遗憾，还不认识此人</string>
    <string name="baidu_face_merge_title">人脸融合</string>
    <string name="baidu_face_merge_start">开始融合</string>
    <string name="baidu_face_merge_select_template_image">长按选择人脸模板</string>
    <string name="baidu_classify_image_type">物体识别分类</string>
    <string name="baidu_classify_image_general_type">通用</string>
    <string name="baidu_classify_image_plant_type">植物</string>
    <string name="baidu_classify_image_car_type">车型</string>
    <string name="baidu_classify_image_dish_type">菜品</string>
    <string name="baidu_classify_image_red_wine_type">红酒</string>
    <string name="baidu_classify_image_logo_type">商标</string>
    <string name="baidu_classify_image_animal_type">动物</string>
    <string name="baidu_classify_image_ingredient_type">果蔬食材</string>
    <string name="baidu_classify_image_landmark_type">地标</string>
    <string name="baidu_classify_image_currency_type">货币</string>
</resources>