<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/setting_title"/>

    <ScrollView
        android:id="@+id/center_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text_view"
        android:layout_above="@+id/bottom_layout"
        android:fadeScrollbars="false"
        android:scrollbarSize="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/baidu_tts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_tts"
                android:checked="false"/>

            <CheckBox
                android:id="@+id/baidu_request_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_request_image"
                android:checked="false"/>

            <CheckBox
                android:id="@+id/baidu_enable_extra_fun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_extra_fun"
                android:checked="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/baidu_face_identify_work_mode"/>

            <RadioGroup
                android:id="@+id/baidu_face_identify_work_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/baidu_online_1N_face_identify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/baidu_online_1N_face_identify"
                    />
                <RadioButton
                    android:id="@+id/baidu_online_MN_face_identify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/baidu_online_MN_face_identify"
                    />
                <RadioButton
                    android:id="@+id/baidu_content_approve_face_identify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/baidu_content_approve_face_identify"
                    />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/baidu_unit_tts_voice_type"/>

            <RadioGroup
                android:id="@+id/baidu_unit_tts_voice_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/baidu_unit_tts_voice_lady"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="15sp"
                    android:text="@string/baidu_unit_tts_voice_lady"/>
                <RadioButton
                    android:id="@+id/baidu_unit_tts_voice_gentleman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/baidu_unit_tts_voice_gentleman"/>
                <RadioButton
                    android:id="@+id/baidu_unit_tts_voice_girl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/baidu_unit_tts_voice_girl"/>
                <RadioButton
                    android:id="@+id/baidu_unit_tts_voice_boy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/baidu_unit_tts_voice_boy"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/baidu_unit_speech_language_type"/>

            <RadioGroup
                android:id="@+id/baidu_unit_speech_language_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/baidu_unit_speech_language_chinese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="15sp"
                    android:text="@string/baidu_unit_speech_language_chinese"/>
                <RadioButton
                    android:id="@+id/baidu_unit_speech_language_sichuanese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/baidu_unit_speech_language_sichuanese"/>
                <RadioButton
                    android:id="@+id/baidu_unit_speech_language_cantonese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/baidu_unit_speech_language_cantonese"/>
                <RadioButton
                    android:id="@+id/baidu_unit_speech_language_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/baidu_unit_speech_language_english"
                    android:enabled="false"/>
            </RadioGroup>

            <TextView
                android:id="@+id/baidu_unit_bot_type_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/baidu_unit_bot_type"
                />
<!--Web Bot ID-->
            <CheckBox
                android:id="@+id/baidu_unit_bot_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:text="@string/baidu_unit_bot_weather"
                android:textColor="@android:color/holo_green_light"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_ia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_ia"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_translate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_translate"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_word_definition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_word_definition"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_idiom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_idiom"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_joke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_joke"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_garbage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_garbage"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_calculator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_calculator"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_unit_conversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_unit_conversion"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_poem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_poem"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_couplet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_couplet"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_greet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:text="@string/baidu_unit_bot_greet"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:text="@string/baidu_unit_bot_chat"/>

            <!--Classify object type-->
            <TextView
                android:id="@+id/baidu_classify_image_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/baidu_classify_image_type"/>

            <CheckBox
                android:id="@+id/baidu_classify_image_general_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:text="@string/baidu_classify_image_general_type"
                android:textColor="@android:color/holo_green_light"/>

            <CheckBox
                android:id="@+id/baidu_classify_image_plant_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:text="@string/baidu_classify_image_plant_type"
                android:textColor="@android:color/holo_green_light"/>

            <CheckBox
                android:id="@+id/baidu_classify_image_car_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:text="@string/baidu_classify_image_car_type"
                android:textColor="@android:color/holo_green_light"/>

            <CheckBox
                android:id="@+id/baidu_classify_image_dish_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:text="@string/baidu_classify_image_dish_type"
                android:textColor="@android:color/holo_green_light"/>

            <CheckBox
                android:id="@+id/baidu_classify_image_red_wine_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:text="@string/baidu_classify_image_red_wine_type"/>

            <CheckBox
                android:id="@+id/baidu_classify_image_logo_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:text="@string/baidu_classify_image_logo_type"/>

            <CheckBox
                android:id="@+id/baidu_classify_image_animal_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:text="@string/baidu_classify_image_animal_type"/>

            <CheckBox
                android:id="@+id/baidu_classify_image_ingredient_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:text="@string/baidu_classify_image_ingredient_type"/>

            <CheckBox
                android:id="@+id/baidu_classify_image_landmark_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:text="@string/baidu_classify_image_landmark_type"/>

            <CheckBox
                android:id="@+id/baidu_classify_image_currency_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:text="@string/baidu_classify_image_currency_type"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/setting_cancel"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/button_cancel"/>

        <Button
            android:id="@+id/setting_ok"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/button_ok"/>
    </LinearLayout>
</RelativeLayout>
